<resources>
    <string name="app_name">POS</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">LOGIN</string>
    <string name="register">Not registered yet? <u>REGISTER</u></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="_continue">continue</string>
    <string name="terms">By Joining inStore,I agree to <u> Trems &amp; Conditions.</u></string>
    <string name="already">Already have an account?<u>LOG IN</u></string>
    <string name="great">Great! We need to setup your profile now.</string>
    <string name="setup_profile">Setup profile</string>
    <string name="first_name">FIRST NAME</string>
    <string name="next">NEXT</string>
    <string name="back">BACK</string>
    <string name="country">COUNTRY</string>
    <string name="state">STATE</string>
    <string name="city">CITY</string>
    <string name="select">Select</string>
    <string name="address_line_1">ADDRESS LINE 1</string>
    <string name="address_line_2">ADDRESS LINE 2</string>
    <string name="zipcode">ZIPCODE</string>
    <string name="eg_102_baker_street">eg. 102 Baker Street</string>
    <string name="eg_cascie_lane">eg. Cascie Lane</string>
    <string name="eg_220992">eg. 220992</string>
    <string name="eg_919090489902">eg. +919090489902</string>
    <string name="eg_jones">eg. Jones</string>
    <string name="eg_alex">eg. Alex</string>
    <string name="notifyme">Notify me for promotions and product release.</string>
    <string name="terms_condition">I accept to the <font fgcolor="#f9720a"><u>Trems &amp; Conditions</u> </font>of inStore and read the <font fgcolor="#f9720a"><u>Privacy Policy</u></font>.</string>
    <string name="finish">FINISH</string>
    <string name="last_name">LAST NAME</string>
    <string name="phone">PHONE</string>
    <string name="hi_there_good_afternoon">Hi there! Good afternoon</string>
    <string name="catalog">Catalog</string>
    <string name="store">Store</string>
    <string name="checkout">Checkout</string>
    <string name="my_applications">My Applications</string>
    <string name="launch">LAUNCH</string>
    <string name="show">SHOW</string>
    <string name="hide">HIDE</string>
    <string name="catalog_administrator_login">Catalog Administrator Login</string>
    <string name="advance_search"><u>Advance search</u></string>
    <string name="browse_catlog">Browse catlog</string>
    <string name="new_catalog">NEW CATALOG</string>
    <string name="catlog_dashboard">Catalog Dashboard</string>
    <string name="title_activity_catalog">catalog</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
