<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/spalsh">

    <TextView
        android:id="@+id/tv_none"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/card_login"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/hi_there_good_afternoon"
        android:textColor="@color/white"
        android:textSize="25sp" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardCornerRadius="5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_myapp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="20dp"
                android:text="@string/my_applications"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/btn_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_power_settings_new_black_24dp" />


            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_catalog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_myapp"
                android:layout_marginLeft="42dp"
                android:src="@drawable/ic_view_carousel_black_24dp"
                app:backgroundTint="@color/grey"
                app:fabSize="normal" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_checkout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/tv_myapp"
                android:layout_marginRight="49sp"
                android:src="@drawable/ic_local_grocery_store_black_24dp"
                app:backgroundTint="@color/grey"
                app:fabSize="normal" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab_store"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_myapp"
                android:layout_centerInParent="true"
                android:layout_marginLeft="44dp"
                android:src="@drawable/ic_store_black_24dp"
                app:backgroundTint="@color/grey"
                app:fabSize="normal" />

            <TextView
                android:id="@+id/store"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fab_store"
                android:layout_centerInParent="true"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/store"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/checkout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/fab_checkout"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/checkout"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/catalog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/fab_catalog"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/catalog"
                android:textSize="15sp" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_launch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/store"
                android:background="@drawable/launch_btn"
                android:text="@string/launch" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>