<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_blur">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_catalog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/card_catlog_login"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_view_carousel_black_24dp"
        app:backgroundTint="@color/black"
        app:fabSize="normal" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_catlog_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:backgroundTint="@color/colorPrimary"
        app:cardCornerRadius="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="20dp"
                android:text="@string/catalog_administrator_login"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_login"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColorHint="@color/offWhite" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_email"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                android:drawablePadding="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="@color/offWhite"
                android:textColorHint="@color/offWhite" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_password"
                android:layout_marginTop="30dp"
                android:background="@drawable/login_btn2"
                android:text="@string/login"
                android:textColor="@color/white" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:src="@drawable/ic_cancel_black_24dp"
        app:backgroundTint="@color/grey"
        app:fabSize="normal" />
</RelativeLayout>