<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/my_toolbar"></include>

        <TextView
            android:id="@+id/tv_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="70dp"
            android:text="Search product"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_search"
            android:layout_margin="15dp"
            android:background="@drawable/edittext"
            android:drawableLeft="@drawable/ic_search_black_24dp"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"
            android:hint="Product name or id"
            android:padding="10dp" />

        <TextView
            android:id="@+id/advance_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/et_search"
            android:layout_marginRight="20dp"
            android:text="@string/advance_search"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/advance_search"
            android:layout_marginTop="10dp"
            android:background="@color/grey" />

        <android.support.design.widget.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:src="@drawable/ic_add_black_24dp"
            app:backgroundTint="@color/colorPrimary"
            app:fabSize="normal" />

        <TextView
            android:id="@+id/tv_browse_catalog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/browse_catlog"
            android:textColor="@color/colorPrimary" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rec_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_browse_catalog"></android.support.v7.widget.RecyclerView>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rec_view"
            android:layout_centerHorizontal="true"
            android:text="@string/new_catalog" />
    </RelativeLayout>
</RelativeLayout>